--- a/_posts/2016-10-25-OpenSSL与网络信息安全.markdown
+++ b/_posts/2016-10-25-OpenSSL与网络信息安全.markdown
@@ -28,3 +28,5 @@ tags:
 组织的所有人也必须更换该算法。
 
 - 有限制算法不可能进行标准化和质量控制，质量得不到保证。因为每个组织都必须有自己唯一的算法，并且由于保密性的需要，不能购买流行的软件或硬件产品，否则窃听者也可以购买这些产品并学习使用该算法，所以组织用户只能自己编写和实现算法。这样不但成本很高，而且如果组织没有密码学家，也没有办法评估算法的安全性。
+
+>未完待续...
