--- a/_posts/2016-10-25-OpenSSL与网络信息安全.markdown
+++ b/_posts/2016-10-25-OpenSSL与网络信息安全.markdown
@@ -23,8 +23,34 @@ tags:
 
 有限制算法在历史上曾经广为使用，但是其有很多局限性，根据现代密码学定义的保密标准，它们已经远远不能满足需要。简而言之有如下缺点：
 
-- 大的或成员经常变化的组织不能使用该算法，因为一旦一个成员离开这个组织，
-为了安全的需要，其他成员就必须更换新的算法。如果有人故意或无意曝露了这个算法，
-组织的所有人也必须更换该算法。
+- 大的或成员经常变化的组织不能使用该算法，因为一旦一个成员离开这个组织，为了安全的需要，其他成员就必须更换新的算法。如果有人故意或无意曝露了这个算法，组织的所有人也必须更换该算法。
 
 - 有限制算法不可能进行标准化和质量控制，质量得不到保证。因为每个组织都必须有自己唯一的算法，并且由于保密性的需要，不能购买流行的软件或硬件产品，否则窃听者也可以购买这些产品并学习使用该算法，所以组织用户只能自己编写和实现算法。这样不但成本很高，而且如果组织没有密码学家，也没有办法评估算法的安全性。
+
+现代加密算法通过**密钥**解决了这个问题。现代加密算法分为两类：
+
+```
+对称加密算法：加密和解密都使用相同密钥，或者虽然相同却可以互相推算出来。
+
+非对称加密算法：加密密钥跟解密密钥并不相同，并且加密密钥和解密密钥无法相互推算出来。
+```
+
+#### 密码通信协议
+上面简单介绍了密码算法的基础知识，通信中应该如何选择，各自都有那些优缺点下面通过几个通信流程了解下：
+
+**基于对称加密算法的安全通信**
+
+一般来说，对称加密算法的特点就是在加密和解密中需要使用相同的密钥。假设用户 Tom 和 Jim 使用对称加密算法进行安全通信的步骤通常如下：
+
+1.  Tom 和 Jim 通过网络协商将要使用的加密算法类型;
+2.  Tom 和 Jim 通过网络协商将要使用的加密和解密密钥和初始向量(有些算法需要);
+3.  Tom 使用协商好的密钥和算法加密要发送的信息;
+4.  Tom 通过网络发送加密后的信息给Jim;
+5.  Jim 收到 Tom 发来的信息，使用协商好的算法和密钥解密信息得到明文。
+
+这种基于对称加密算法的安全网络通信协议存在以下问题：
+
+1. 在通信步骤第1步时，通信双方必须使用明文进行通信，包括协商加密算法和加密密钥，假设攻击者在一开始就监听整个通信过程，就可以窃取密钥，那整个通信过程便不再安全。这就导致密钥必须秘密地进行分配，例如通过U盘复制等，对于自动化程度高和应用广泛的加密系统来说，这样做的代价将是不可接受的。
+2. 一旦加密密钥丢失，那么获得密钥的攻击者就有能力解密通信中的任何数据，并且可以假装成其中任何一方发送虚假信息而不被发觉。
+3. 在安全性要求高的系统中，用户两两之间进行通信使用的密钥都应该是不同的。随着用户的增多，需要的密钥个数会成平方级迅速增长
+
