git忽略文件blog完善

--- a/_posts/2016-11-1-git基本使用.md
+++ b/_posts/2016-11-1-git基本使用.md
@@ -99,7 +99,7 @@ tags:
 
 - 特殊情况：
 
-  - 如果文件已经commit了，再加gitignore是无效的，需要清除下缓存 `git rm --cached 文件名`，再在.gitignore中写上忽略规则，然后提交。这样清除的是跟踪状态，如果想彻底删除某一文件，可以直接 rm ，然后忽略，提交。
+  - 如果文件已经commit了，再加gitignore是无效的，需要清除下缓存 `git rm --cached 文件名`或`git rm --cached -r 文件夹名`，`-r`表示递归清除文件夹中内容，再在.gitignore中写上忽略规则，然后提交。这样清除的是跟踪状态，如果想彻底删除某一文件，可以直接 rm ，然后忽略，提交。
   - 如果文件已经纳入版本管理中，需要在clone下来的仓库中设置需要忽略的文件：`git update-index —assume-unchanged 要忽略的文件`，取消忽略：`git update-index --no-assume-unchanged 文件名`。
 
 #### 分支管理
